--- a/static/tandalogin.html
+++ b/static/tandalogin.html
@@ -39,7 +39,7 @@
                 xhr2.onreadystatechange = function () {
                   if(xhr2.readyState === XMLHttpRequest.DONE && xhr2.status === 200) {
                        var tanda_id = xhr2.response.id;
-                       window.location = '/facebook.html?id=' + tanda_id;
+                       window.location = 'facebook.html?id=' + tanda_id;
 
               }
             };
