--- a/static/tandalogin.html
+++ b/static/tandalogin.html
@@ -1,58 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Tanda Login</title>
-</head>
-<body>
-
-<form>
-  Tanda Login:<br>
-  <input type="text" id="login" name="login" value="">
-  <br>
-  Password:<br>
-  <input type="password" id="password" name="password" value="">
-  <br><br>
-    <script>function TandaLogin() {
-        var url = "https://my.tanda.co/api/oauth/token?";
-        var username = document.getElementById("login").value;
-        var password = document.getElementById("password").value;
-        var params = "username=" + username + "&password=" + password + "&scope=me&grant_type=password";
-
-        var xhr = new XMLHttpRequest();
-        xhr.open("POST", url, true);
-        xhr.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-
-        xhr.responseType = "json";
-        xhr.send(params);
-
-        xhr.onreadystatechange = function () {
-          if(xhr.readyState === XMLHttpRequest.DONE && xhr.status === 200) {
-            var access_token = xhr.response.access_token;
-            var xhr2 = new XMLHttpRequest();
-            var url2 = "https://my.tanda.co/api/v2/users/me";
-            xhr2.open("GET", url2, true);
-            xhr2.setRequestHeader("Authorization", "bearer " + access_token);
-            xhr2.responseType = "json";
-            xhr2.send();
-
-                xhr2.onreadystatechange = function () {
-                  if(xhr2.readyState === XMLHttpRequest.DONE && xhr2.status === 200) {
-                       var tanda_id = xhr2.response.id;
-                       window.location = 'facebook.html?id=' + tanda_id;
-
-              }
-            };
-
-
-          }
-        };
-
-    }</script>
-
-    <input type="button" onclick="TandaLogin()" value="Submit"/>
-</form>
-
-</body>
-
+    <head>
+        <link rel="stylesheet" href="stylesheets/login.css" type="text/css">
+        <script src="javascripts/tanda.js"></script>
+        <meta charset="UTF-8">
+        <title>Tanda Login</title>
+    </head>
+    <body>
+        <div id="wrapper">
+            <div class="center">
+                <div class="content">
+                    <div id="login">
+                        <h3>Log in to Tanda</h3>
+                        <input type="text" id="username" name="login" placeholder="Email">
+                        <input type="password" id="password" name="password" placeholder="Password">
+                        <input type="submit" onclick="TandaLogin()" value="Log In"/>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
